# RAG_engine

./: .gitignore  DOCUMENTATION.md  README.md  context.md  orchestrator.py  pyproject.toml  query_cli.py  requirements.txt  retrieval_benchmark.md
config/: config.yaml
data/: technical_paragraphs.json
scripts/: run_benchmark.py
src/rag_engine/: __init__.py  app.py  canned_query_expansions.py  gcp_mocks.py  vertex_stubs.py
src/rag_engine/chunking/: __init__.py  base.py  factory.py  fixed_character.py  fixed_token.py  recursive.py  semantic.py  sentence.py
src/rag_engine/config/: __init__.py  loader.py  schema.py
src/rag_engine/documents/: __init__.py  loader.py  models.py
src/rag_engine/embeddings/: __init__.py  base.py  factory.py  mock_vertex_embedder.py  sentence_transformer_embedder.py
src/rag_engine/evaluation/: __init__.py  benchmark.py  metrics.py  reporter.py
src/rag_engine/retrieval/: __init__.py  query_expander.py  result_models.py  retriever.py  strategies.py
src/rag_engine/vectorstores/: __init__.py  base.py  chroma_store.py  factory.py  faiss_store.py  index_policy.py  numpy_store.py
tests/: conftest.py  test_benchmark_output.py  test_chroma_store.py  test_chunking.py  test_embeddings.py  test_faiss_store.py  test_gcp_sdk_mocking.py  test_plaintext_loader.py  test_query_expansion.py  test_retrieval_pipeline.py
